# QwaveCV

./: CMakeLists.txt  OpenCV_Functions.cpp  OpenCV_Template.cpp  OpenCV_UI.cpp  OpenCV_Utilities.cpp  README.md
